--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -1,13 +1,13 @@
 [entity-name]
-mage-onyx=Mage Onyx
+mage-onyx-ore=Mage Onyx Ore
 midnight-essence=Midnight Essence
 
 [autoplace-control-names]
-mage-onyx=Mage Onyx
+mage-onyx-ore=Mage Onyx Ore
 midnight-essence=Midnight Essence
 
 [item-name]
-mage-onyx=Mage Onyx
+mage-onyx-ore=Mage Onyx Ore
 
 [fluid-name]
 midnight-essence=Midnight Essence
