--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -8,6 +8,20 @@ midnight-essence=Midnight Essence
 
 [item-name]
 mage-onyx-ore=Mage Onyx Ore
+mage-onyx-plate=Mage Onyx Plate
+unholy-hand-grenade=Unholy Hand Grenade
 
 [fluid-name]
 midnight-essence=Midnight Essence
+
+[recipe-name]
+mage-onyx-plate=Mage Onyx Plate
+unholy-hand-grenade=Unholy Hand Grenade
+
+[technology-name]
+scripture=Scripture
+religious-demolition=Religious Demolition
+
+[technology-description]
+scripture=Gain access to powers some might consider unnatural.
+religious-demolition=Explosive ordinance designed to extinguish herecy.
